--- a/src/app/modules/menu-layout/components/rates/rates.component.html
+++ b/src/app/modules/menu-layout/components/rates/rates.component.html
@@ -4,10 +4,67 @@
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
 
         <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nueva tarifa</span></button>
-        <nz-modal [(nzVisible)]="isVisible" nzTitle="Zonas" (nzOnCancel)="handleCancel()" (nzOnOk)="PostRate()">
+        <nz-modal [(nzVisible)]="isVisible" nzTitle="Tarifas Mensuales" (nzOnCancel)="handleCancel()" (nzOnOk)="PostRate()">
           <ng-container *nzModalContent>
 
             <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
+              <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="12" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputMedium" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="codigo" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+                </div>
+
+                <div nz-col  nzSpan="12" class="row1-col2">
+                  <label>Clasificacion de tarifa</label>
+                  <div nz-row >
+                    <nz-input-group>
+                      <nz-select [ngModel]="'x1'" class="inputMedium">
+                        <nz-option nzLabel="x1" nzValue="0.1"></nz-option>
+                        <nz-option nzLabel="x2" nzValue="0.2"></nz-option>
+                      </nz-select>                   
+                    </nz-input-group>
+                  </div>
+                </div>
+              </div>
+              <div nz-row class="row-2">
+                
+                <div nz-col [nzSpan]="24" class="row3-col1">
+
+                    <label>Descripcion</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" Zona ## "  [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+
+                </div>
+
+              </div>
+              <div nz-row class="row-3">
+                
+                <div nz-col [nzSpan]="24" class="row3-col1">
+                    
+                    <label>Observacion</label>
+                    <div nz-row>
+                        <nz-form-item>
+                          <nz-form-control>
+                            <textarea class="inputLarge"  nz-input rows="2" placeholder=" Escriba algo respecto a la zona " formControlName="observacion"></textarea>
+                          </nz-form-control>
+                        </nz-form-item>
+                    </div>
+
+                </div>
+
+              </div>
               
             </form>
           </ng-container>
@@ -59,7 +116,149 @@
             <td>{{data.codigo}}</td>
             <td>{{ data.descripcion }}</td>
             <td nzRight>
-              <button class="parameters" nz-button nzType="primary">Parametros</button>
+              <button nz-button [nzType]="'primary'" (click)="showModal2()"><span>Parametros</span></button>
+              <nz-modal [(nzVisible)]="isVisible2" nzTitle="The first Modal" (nzOnCancel)="handleCancel2()" (nzOnOk)="handleOk2()" 
+              [nzStyle]="{ top: '40px' }">
+                <ng-container *nzModalContent>
+                  <form nz-form nzLayout="horizontal">
+
+
+                    <div nz-row class="row-1">
+
+                      <div nz-col nzSpan="10">
+
+                        <label>Fecha Inicial</label>
+                        <div nz-row>
+                          <nz-form-item>
+                            <nz-form-control>
+                                <nz-date-picker class="inputMedium"></nz-date-picker>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+
+                      </div>
+
+                      <div nz-col nzOffset="1" nzSpan="12">
+
+                        <label>Fecha Final</label>
+                        <div nz-row>
+                          <nz-form-item>
+                            <nz-form-control>
+                              <nz-date-picker class="inputMedium"></nz-date-picker>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+
+                      </div>
+
+                    </div>
+
+                    <div nz-row class="row-2">
+
+                      <div nz-col nzSpan="10">
+
+                        <label>Cargo</label>
+                        <div nz-row>
+                          <nz-form-item>
+                            <nz-form-control>
+                                <nz-select [ngModel]="'x1'" class="inputMedium">
+                                  <nz-option nzLabel="x1" nzValue="0.1"></nz-option>
+                                  <nz-option nzLabel="x2" nzValue="0.2"></nz-option>
+                                </nz-select>                   
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+
+                      </div>
+
+                      <div nz-col nzOffset="1" nzSpan="10">
+
+                        <label>Valor</label>
+                        <div nz-row>
+                          <nz-form-item>
+                            <nz-form-control>
+                              <input nz-input class="inputMedium" id="Descripcion" type="text" placeholder="(0.5)%"  [disabled]="false" />
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+
+                      </div>
+                      
+                    </div>
+
+                    <div nz-row class="row-3">
+
+                      <div nz-col nzSpan="24">
+                        
+                        <label  nzRequired>Observacion</label>
+                        <div nz-row>
+                          <nz-form-item>
+                            <nz-form-control>
+                              <textarea class="inputLarge" formControlName="observacion" nz-input rows="2" placeholder="Escriba algo"></textarea>
+                            </nz-form-control>
+                          </nz-form-item>
+                        </div>
+
+                      </div>
+
+                    </div>
+
+                    
+                    <div nz-row class="row-4">
+                      <div nz-col [nzSpan]="6"  [nzOffset]="14" class="row4-col1">
+                          <nz-form-item  nzFlex>
+                              <button nz-button nzType="default">Cancelar</button>
+                          </nz-form-item>
+                      </div>
+                      <div nz-col [nzSpan]="4" class="row4-col2">
+                          <nz-form-item  nzFlex>
+                              <button nz-button nzType="primary">Guardar</button>
+                          </nz-form-item>
+
+                      </div>
+                    </div>
+            
+                    <div nz-row class="row-5">
+                      <div nz-col>
+                          <nz-table #filterTable [nzData]="listOfDataModal" nzTableLayout="fixed" [nzScroll]="{  x: '600px', y: '240px' }"  [nzPageSize]="10">
+                            <thead>
+                              <tr>
+                              <th nzLeft nzWidth="80px">ID</th>
+                                <th
+                                  *ngFor="let column of listOfColumns"
+                                  [nzSortOrder]="column.sortOrder"
+                                  [nzSortFn]="column.sortFn"
+                                  [nzSortDirections]="column.sortDirections"
+                                  [nzFilterMultiple]="column.filterMultiple"
+                                  [nzFilters]="column.listOfFilter"
+                                  [nzFilterFn]="column.filterFn"
+                                  nzWidth="150px"
+                                >
+                                  {{ column.name }}
+                                </th>
+                                <th nzRight nzWidth="80px">Acciones</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr *ngFor="let data of filterTable.data">
+                                <td nzLeft>{{ data.name }}</td>
+                                <td>{{ data.age }}</td>
+                                <td>{{ data.address }}</td>
+                                <td nzRight>
+                                  <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+                                  <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                                </td>
+                              </tr>
+                            </tbody>
+                          </nz-table>
+                          
+                      </div>
+                    </div>
+
+
+                  </form>
+                </ng-container>
+              </nz-modal>
                 
             </td>
           </tr>
